--- a/ping-pong.html
+++ b/ping-pong.html
@@ -3,17 +3,18 @@
 
 <head>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.0/jquery.min.js"></script>
-    <script type="text/javascript" src="/js/scripts.js">
+    <script type="text/javascript" src="js/scripts.js">
     </script>
     <meta charset="utf-8">
     <title>Ping pong</title>
 </head>
 
 <body>
-    <form>
+    <form class="ping-pong">
         <label for="number">
-                <input type="text" name="number">
+                <input type="text" name="number" id="number">
                 <button type="submit">Play</button>
         </form>
+        <ul id ="solution"></ul>
     </body>
 </html>
