--- a/ping-pong.html
+++ b/ping-pong.html
@@ -3,8 +3,7 @@
 
 <head>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.0/jquery.min.js"></script>
-    <script type="text/javascript" src="js/scripts.js"></script>
-    <script type="text/javascript" src="js/ping-pong-interface.js"></script>
+    <script type="text/javascript" src="build/js/app.js"></script>
     <meta charset="utf-8">
     <title>Ping pong</title>
 </head>
