add uglify and minifyScripts

--- a/ping-pong.html
+++ b/ping-pong.html
@@ -10,10 +10,16 @@
 
 <body>
     <form class="ping-pong">
-        <label for="number">
-                <input type="text" name="number" id="number">
-                <button type="submit">Play</button>
-        </form>
-        <ul id ="solution"></ul>
-    </body>
+        <label for="number">Enter a number </label>
+        <input type="text" name="number" id="number">
+        <button type="submit">Play</button>
+    </form>
+    <ul id="solution"></ul>
+    <form class="signup">
+        <label for="email">Enter email address</label>
+        <input type="email" name="email" id="email">
+        <button type="submit" name="signup-submit">Submit</buxtton>
+    </form>
+</body>
+
 </html>
