correct pingpong output

--- a/ping-pong.html
+++ b/ping-pong.html
@@ -18,7 +18,7 @@
     <form class="signup">
         <label for="email">Enter email address</label>
         <input type="email" name="email" id="email">
-        <button type="submit" name="signup-submit">Submit</buxtton>
+        <button type="submit" name="signup">Submit</buxtton>
     </form>
 </body>
 
